--- a/core/templates/inmuebles/inmueble_list.html
+++ b/core/templates/inmuebles/inmueble_list.html
@@ -6,6 +6,10 @@
 Buscar Inmuebles
 {% endblock %}
 
+{% block tmain %}
+<h4 class="mx-3">{{ titulo }}</h4>
+{% endblock %}
+
 {% block tlista %} Listado de Inmuebles {% endblock %}
 
 {% block tExtras %} 
